# engine

./: .gitignore  AN-01_COMPLETE_PACKAGE.md  AN-01_COMPLETION.md  AN-01_DELIVERABLES.txt  AN-01_DEPLOYMENT_REPORT.md  AN-01_STATUS.sh  AN-01_SUMMARY.md  AUTH01_COMPLETION_FINAL.md  AUTH01_IMPLEMENTATION_SUMMARY.md  AUTH01_READINESS.md  EN01_EN05_COMPLETION_REPORT.md  MASTER_BACKEND_HARDENING_PLAN.md  PHASE_03_RAW_STORAGE_PRESIGN_REGISTER_FIX.md  PHASE_04_AUDIT_LOGGING_TRACE_IDS_IMMUTABILITY.md  PHASE_05_GLOBAL_FEATURE_FLAGS_TENANT0_LAYER.md  PHASE_07_PRIVACY_TRAIN_PREFS_API_PERSISTENCE.md  PHASE_08_REALTIME_REGISTRY_DURABILITY_THROTTLES.md  PHASE_0_5_LANE0_LANE1_SUMMARY.md  PHASE_0_5_LANE2_COMPLETION_SUMMARY.md  PHASE_0_5_LANE3_COMPLETION_SUMMARY.md  PHASE_0_5_LANE4_COMPLETION_SUMMARY.md  PHASE_0_5_LANE5_COMPLETION_SUMMARY.md  PHASE_0_5_LANES_2_3_EXECUTION_SUMMARY.md  PHASE_0_6_BUILDER_A_COMPLETION_SUMMARY.md  PHASE_0_6_BUILDER_BC_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION.md  PROMPT_LANE_A_MINI.md  PROMPT_LANE_B_MINI.md  QUICKSTART_AN01.md  README.md  RUNBOOK_PROD_READINESS_CHECK.md  WORK_ENG_MCP_01_LOCAL.md  WORK_JULES_MCP_PHASE2.md  WORK_JULES_MCP_PHASE3.md  conftest.py  dummy_embeddings.jsonl  fortnite_showcase.html  generate_showcase.py  grime_showcase.html  human_showcase.html  (+22 more)
northstar-engines/: COMMIT_INSTRUCTIONS.md  DOCUMENTATION_INDEX.md  GATE1_INTEGRATION_REPORT.md  GATE_1_IMPLEMENTATION.md  MERGE_CHECKLIST.md  README_GATE1_MODECTX.md  STABILIZATION_COMPLETE.md  STABILIZATION_SUMMARY.md  conftest.py  pyproject.toml  run_integration_tests.py  run_tests.py  (+1 more)
(+1860 files in other folders)
